<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="movies_button_text">Movies App</string>
    <string name="scores_button_text">Scores App</string>
    <string name="library_button_text">Library App</string>
    <string name="buildIt_button_text">Build it Bigger</string>
    <string name="XYZ_button_text">XYZ Reader</string>
    <string name="capstone_button_text">Capstone</string>
    <string name="launcher_title_text">My Nanodegree App Launcher</string>
    <string name="movies_click_text">This opens up the movies app!</string>
    <string name="scores_click_text">This opens up the scores app!</string>
    <string name="library_click_text">This opens up the library app!</string>
    <string name="build_click_text">This opens up the build it app!</string>
    <string name="xyz_click_text">This opens up the XYZ app!</string>
    <string name="capstone_click_text">This opens up the capstone app!</string>

</resources>
