<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/spotify_button_text"
        android:id="@+id/spotify_button"
        style="@style/spotify_button_style"
        android:background="@drawable/spotify_button_states"
        android:layout_marginTop="62dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/scores_button"
        android:layout_alignStart="@+id/scores_button" />
    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/scores_button_text"
        android:id="@+id/scores_button"
        style="@style/scores_button_style"
        android:background="@drawable/scores_button_states"
        android:layout_below="@+id/spotify_button"
        android:layout_alignLeft="@+id/library_button"
        android:layout_alignStart="@+id/library_button" />
    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/library_button_text"
        android:id="@+id/library_button"
        style="@style/library_button_style"
        android:background="@drawable/library_button_states"
        android:layout_below="@+id/scores_button"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/buildIt_button_text"
        android:id="@+id/buildIt_button"
        style="@style/buildIt_button_style"
        android:background="@drawable/buildit_button_states"
        android:layout_below="@+id/library_button"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/XYZ_button_text"
        android:id="@+id/xyz_button"
        style="@style/XYZ_button_style"
        android:background="@drawable/xyz_button_states"
        android:layout_below="@+id/buildIt_button"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/capstone_button_text"
        android:id="@+id/capstone_button"
        style="@style/capstone_button_style"
        android:background="@drawable/capstone_button_states"
        android:layout_below="@+id/xyz_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launcher_title_text"
        android:id="@+id/launcher_title_text"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
